// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleListItem should render correctly 1`] = `
<div>
  <li
    class="rmd-list-item"
  >
    Content
  </li>
</div>
`;

exports[`SimpleListItem should render correctly 2`] = `
<div>
  <li
    class="rmd-list-item rmd-list-item--medium"
  >
    <span
      class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
    >
      Left
    </span>
    Content
  </li>
</div>
`;
